--- a/workflows/deploy.yaml
+++ b/workflows/deploy.yaml
@@ -28,7 +28,7 @@ jobs:
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: us-east-1  # or your desired region
+          aws-region: ${{ github.event.inputs.AWS_REGION }}
 
       - name: Run tag update script
         run: |
