--- a/.github/workflows/tag-update.yml
+++ b/.github/workflows/tag-update.yml
@@ -28,7 +28,7 @@ jobs:
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: ${{ github.event.inputs.AWS_REGION }}
+          aws-region: ${{ github.event.inputs.aws_region }}
 
       - name: Run tag update script
         run: |
