--- a/.github/workflows/tag-update.yml
+++ b/.github/workflows/tag-update.yml
@@ -30,6 +30,10 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ secrets.AWS_REGION }}
 
-      - name: Run tag update script
+      - name: Run resource_arns.py
         run: |
-          python tag_updater.py
+          python resource_arns.py
+
+      - name: Run tag-updater.py
+        run: |
+          python tag-updater.py
